--- a/Stock_analysis/FindataAdvanceanalyis.ipynb
+++ b/Stock_analysis/FindataAdvanceanalyis.ipynb
@@ -43,7 +43,7 @@
         "id": "lbrRp-DKty3K"
       },
       "source": [
-        "file_id = '1xT-z6iGBwpWYABzrBHWFUFmncuFoTVFp' #-- Updated File ID for my zip\n",
+        "file_id = 'xyz' #-- Updated File ID for my zip\n",
         "file_obj = drive.CreateFile({'id': file_id})\n",
         "file_obj.GetContentFile('Finance_Data_Exc.zip') "
       ],
