--- a/powerbisalesanalysis/SalesanalysisEDA&Viz.ipynb
+++ b/powerbisalesanalysis/SalesanalysisEDA&Viz.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "#import data\n",
-    "df = pd.read_excel(r'C:\\Users\\kmp\\Downloads\\US_Regional_Sales_Data.xlsx', index_col=0)"
+    "df = pd.read_excel(r'C:\\Redacted, index_col=0)"
    ]
   },
   {
